--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html class="wide wow-animation" lang="en">
   <head>
     <title>苏州千旭精密制造有限公司</title>
+    <meta name="description" content="苏州千旭精密制造有限公司是一家专注于精密吊装配件研发、生产与销售的企业，主要产品涵盖万向吊环、侧拉吊环、卸扣型吊环等，广泛应用于机械制造、模具、建筑、物流等行业。公司拥有先进的生产设备和完善的质量管理体系，坚持以优质的产品和专业的服务满足客户多样化需求，致力于为各行业提供高效、安全的吊装解决方案。">
+    <meta name="keywords" content="滚珠吊环, 侧拉吊环, 眼型吊环, 螺母吊环, 卸扣吊环, 工业万向旋转吊环, 苏州千旭精密制造有限公司">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="/cdn-cgi/apps/head/3ts2ksMwXvKRuG480KNifJ2_JNM.js"></script><link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700">
+    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700"> -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
@@ -58,8 +60,8 @@
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand" style=" width:800;height:82">
                     <!--Brand--><a class="brand" href="index.html">
-                     <img class="brand-logo-dark" src="images/logo-2.png" alt="" width="800" height="82"/>
-                     <img class="brand-logo-light" src="images/logo1.png" alt="" width="800" height="82"/></a>
+                     <img class="brand-logo-dark" src="images/logo-2.png" alt="苏州千旭精密制造有限公司" width="800" height="82"/>
+                     <img class="brand-logo-light" src="images/logo1.png" alt="苏州千旭精密制造有限公司" width="800" height="82"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-aside-element">
@@ -93,7 +95,8 @@
               <div class="container">
                 <div class="row">
                   <div class="col-sm-8 col-md-7">
-                    <h2 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">专业吊环制造企业<br>Professional</h2>
+                    <h1 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">专业吊环制造<br></h1>
+                    <h2 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">Professional</h2>
                     <h5 class="swiper-title-2 text-width-medium" data-caption-animate="fadeInLeft" data-caption-delay="250">国家级高新技术产业，致力于高品质吊环及各类吊点研发制造。</h5>
                   </div>
                 </div>
@@ -103,9 +106,9 @@
           <div class="swiper-slide swiper-slide-2" data-slide-bg="images/baner_1.jpg">
             <div class="swiper-slide-caption section-md text-center">
               <div class="container">
-                <h2 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">权威CE认证</h2>
-                <h5 class="swiper-title-2" data-caption-animate="fadeInRight" data-caption-delay="250">Authoritative CE Certification
-<br class="d-none d-md-block">严控品质通过多项认证，为起吊安全保驾护航.
+                <h1 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">权威CE认证</h1>
+                <h2 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">Authoritative CE Certification</h2>
+                <h5 class="swiper-title-2" data-caption-animate="fadeInRight" data-caption-delay="250"><br class="d-none d-md-block">严控品质通过多项认证，为起吊安全保驾护航.
                 </h5>
               </div>
             </div>
@@ -136,7 +139,7 @@
               <!-- Product-->
               <article class="product wow fadeInRight">
                 <div class="product-body">
-                  <div class="product-figure"><img src="images/goods/gunzhu.png" alt="" width="180" height="180"/>
+                  <div class="product-figure"><img src="images/goods/gunzhu.png" alt="滚珠吊环" width="180" height="180"/>
                   </div>
                   <h5 class="product-title"><a href="gunzhu-product.html">滚珠吊环</a></h5>
                   <div class="product-price-wrap">
@@ -152,7 +155,7 @@
               <!-- Product-->
               <article class="product wow fadeInRight" data-wow-delay=".1s">
                 <div class="product-body">
-                  <div class="product-figure"><img src="images/goods/cela.png" alt="" width="180" height="180"/>
+                  <div class="product-figure"><img src="images/goods/cela.png" alt="侧拉吊环" width="180" height="180"/>
                   </div>
                   <h5 class="product-title"><a href="cela-product.html">侧拉吊环</a></h5>
                   <div class="product-price-wrap">
@@ -168,7 +171,7 @@
               <!-- Product-->
               <article class="product wow fadeInRight" data-wow-delay=".2s">
                 <div class="product-body">
-                  <div class="product-figure"><img src="images/goods/yanxing.png" alt="" width="180" height="180"/>
+                  <div class="product-figure"><img src="images/goods/yanxing.png" alt="眼型吊环" width="180" height="180"/>
                   </div>
                   <h5 class="product-title"><a href="yanxing2-product.html">眼型吊环</a></h5>
                   <div class="product-price-wrap">
@@ -184,7 +187,7 @@
               <!-- Product-->
               <article class="product wow fadeInLeft" data-wow-delay=".3s">
                 <div class="product-body">
-                  <div class="product-figure"><img src="images/goods/luomu.png" alt="" width="180" height="180"/>
+                  <div class="product-figure"><img src="images/goods/luomu.png" alt="螺母吊环" width="180" height="180"/>
                   </div>
                   <h5 class="product-title"><a href="luomu-product.html">螺母吊环</a></h5>
                   <div class="product-price-wrap">
@@ -200,7 +203,7 @@
               <!-- Product-->
               <article class="product wow fadeInLeft" data-wow-delay=".2s">
                 <div class="product-body">
-                  <div class="product-figure"><img src="images/goods/xiekou.png" alt="" width="180" height="180"/>
+                  <div class="product-figure"><img src="images/goods/xiekou.png" alt="卸扣吊环" width="180" height="180"/>
                   </div>
                   <h5 class="product-title"><a href="xiekou-product.html">卸扣吊环</a></h5>
                   <div class="product-price-wrap">
@@ -216,7 +219,7 @@
               <!-- Product-->
               <article class="product wow fadeInLeft" data-wow-delay=".1s">
                 <div class="product-body">
-                  <div class="product-figure"><img src="images/goods/yanxing1.png" alt="" width="180" height="180"/>
+                  <div class="product-figure"><img src="images/goods/yanxing1.png" alt="眼型吊环" width="180" height="180"/>
                   </div>
                   <h5 class="product-title"><a href="yanxing1-product.html">眼型吊环</a></h5>
                   <div class="product-price-wrap">
@@ -282,19 +285,19 @@
                   <div class="owl-carousel owl-style-5" data-items="1" data-margin="30" data-dots="true" data-autoplay="true">
                 
                     <article class="product-creative">
-                      <div class="product-figure"><img src="images/factory/example_7.jpg" alt="" width="470" height="324"/>
+                      <div class="product-figure"><img src="images/factory/example_7.jpg" alt="千旭精密制造工厂实拍" width="470" height="324"/>
                       </div>
                     </article>
                     <article class="product-creative">
-                      <div class="product-figure"><img src="images/factory/example_8.jpg" alt="" width="470" height="324"/>
+                      <div class="product-figure"><img src="images/factory/example_8.jpg" alt="千旭精密制造工厂设备" width="470" height="324"/>
                       </div>
                     </article>
                         <article class="product-creative">
-                      <div class="product-figure"><img src="images/factory/example_3.jpg" alt="" width="470" height="324"/>
+                      <div class="product-figure"><img src="images/factory/example_3.jpg" alt="千旭精密制造车间" width="470" height="324"/>
                     </div>
                     </article>
                     <article class="product-creative">
-                      <div class="product-figure"><img src="images/factory/example_4.jpg" alt="" width="470" height="324"/>
+                      <div class="product-figure"><img src="images/factory/example_4.jpg" alt="千旭精密制造产品" width="470" height="324"/>
                       </div>
                     </article>
                   </div>
@@ -375,17 +378,17 @@
                 <div class="slick-quote-nav">
                   <div class="slick-slider child-carousel" id="child-carousel" data-arrows="true" data-for="#carousel-parent" data-items="1" data-sm-items="1" data-md-items="3" data-lg-items="3" data-xl-items="3" data-xxl-items="3">
                     <div class="item">
-                      <div class="quote-minimal-figure"><img src="images/goods/gunzhu_87_87.jpg" alt="" width="87" height="87"/>
+                      <div class="quote-minimal-figure"><img src="images/goods/gunzhu_87_87.jpg" alt="滚珠型吊环" width="87" height="87"/>
                       </div>
                       <div class="quote-minimal-author">滚珠型吊环</div>
                     </div>
                     <div class="item">
-                      <div class="quote-minimal-figure"><img src="images/goods/cela_87_87.jpg" alt="" width="87" height="87"/>
+                      <div class="quote-minimal-figure"><img src="images/goods/cela_87_87.jpg" alt="侧拉型吊环" width="87" height="87"/>
                       </div>
                       <div class="quote-minimal-author">侧拉型吊环</div>
                     </div>
                     <div class="item">
-                      <div class="quote-minimal-figure"><img src="images/goods/xiekou_87_87.jpg" alt="" width="87" height="87"/>
+                      <div class="quote-minimal-figure"><img src="images/goods/xiekou_87_87.jpg" alt="卸扣型吊环" width="87" height="87"/>
                       </div>
                       <div class="quote-minimal-author">卸扣型吊环</div>
                     </div>
@@ -415,7 +418,7 @@
               <div class="col-sm-6 col-lg-4 col-xl-3 isotope-item" data-filter="Type 1">
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/goods/11_270_250.jpg" alt="" width="270" height="250"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/11_270_250.jpg" alt="吊环产品实拍" width="270" height="250"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
@@ -427,7 +430,7 @@
               <div class="col-sm-6 col-lg-4 col-xl-3 isotope-item" data-filter="Type 1">
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/goods/15_270_530.jpg" alt="" width="270" height="530"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/15_270_530.jpg" alt="吊环产品实拍" width="270" height="530"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
@@ -439,7 +442,7 @@
               <div class="col-sm-6 col-lg-4 col-xl-3 isotope-item" data-filter="Type 1">
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/goods/12_270_250.jpg" alt="" width="270" height="250"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/12_270_250.jpg" alt="吊环产品实拍" width="270" height="250"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
@@ -451,7 +454,7 @@
               <div class="col-sm-6 col-lg-4 col-xl-3 isotope-item" data-filter="Type 1">
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/goods/13_270_250.jpg" alt="" width="270" height="250"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/13_270_250.jpg" alt="吊环产品实拍" width="270" height="250"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
@@ -463,7 +466,7 @@
               <div class="col-sm-6 col-lg-4 col-xl-3 isotope-item" data-filter="Type 0">
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/goods/14_270_250.jpg" alt="" width="270" height="250"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/14_270_250.jpg" alt="吊环产品实拍" width="270" height="250"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
@@ -475,7 +478,7 @@
               <div class="col-sm-6 col-lg-4 col-xl-6 isotope-item" data-filter="Type 1">
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/goods/16_570_530.jpg" alt="" width="570" height="530"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/16_570_530.jpg" alt="吊环产品实拍" width="570" height="530"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
@@ -487,7 +490,7 @@
               <div class="col-sm-6 col-lg-8 col-xl-6 isotope-item" data-filter="Type 1">
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/goods/17_570_250.jpg" alt="" width="570" height="250"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/17_570_250.jpg" alt="吊环产品实拍" width="570" height="250"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
@@ -533,7 +536,7 @@
         </div>
         <div class="footer-modern-panel text-center">
           <div class="container">
-            <p class="rights"><span>Copyright &copy; 2025.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">备案号：苏ICP00001号;</a></span></p>
+            <p class="rights"><span>Copyright &copy; 2025 苏州千旭精密制造有限公司 All rights reserved. <a href="https://beian.miit.gov.cn" target="_blank">苏ICP备2025201168号-1</a></span></p>
           </div>
         </div>
       </footer>
