--- a/luomu-product.html
+++ b/luomu-product.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="zh-CN">
   <head>
-    <title>产品详情</title>
+    <title>螺母吊环 - 产品详情 - 苏州千旭精密制造有限公司</title>
+    <meta name="description" content="苏州千旭精密制造有限公司供应高品质螺母吊环，采用高强度合金钢制造，安全可靠。适用于各类工业吊装、设备固定及运输场景，是您理想的吊装配件选择。">
+    <meta name="keywords" content="螺母吊环, 苏州千旭精密制造有限公司, 精密吊装配件, 合金钢吊环">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700">
+    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700"> -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
@@ -43,8 +45,8 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <div class="rd-navbar-brand" style=" width:800;height:82">
                     <a class="brand" href="index.html">
-                      <img class="brand-logo-dark" src="images/logo-2.png" alt="" width="800" height="82"/>
-                      <img class="brand-logo-light" src="images/logo1.png" alt="" width="800" height="82"/>
+                      <img class="brand-logo-dark" src="images/logo-2.png" alt="苏州千旭精密制造有限公司" width="800" height="82"/>
+                      <img class="brand-logo-light" src="images/logo1.png" alt="苏州千旭精密制造有限公司" width="800" height="82"/>
                     </a>
                   </div>
                 </div>
@@ -91,8 +93,8 @@
               <img src="images/goods/luomu.png" alt="螺母吊环" width="380" height="380" style="border-radius:12px;box-shadow:0 4px 24px rgba(0,0,0,0.14)" class="d-block mx-auto">
             </div>
             <div class="col-md-6 col-lg-7">
-              <h2>螺母吊环</h2>
-              <p>适用于起重，耐用可靠。</p>
+              <h1>螺母吊环</h1>
+              <p>螺母吊环采用高强度合金钢锻造而成，具有安装便捷、承载力强的特点。其设计允许与螺栓等紧固件配合使用，广泛应用于模具、机械设备及各种重物的起吊和固定作业中，是工业生产中不可或缺的安全吊装辅具。</p>
               <ul class="list-marked">
                 <li>材质：合金钢</li>
                 <li>颜色：红色，定制</li>
@@ -106,9 +108,9 @@
             <div class="col-12">
               <h4>产品详情</h4>
               <h5>L型</h5>
-              <img src="images/goods/lmxq-l.jpg" class="d-block mx-auto"/>
+              <img src="images/goods/lmxq-l.jpg" class="d-block mx-auto" alt="螺母吊环L型规格详情"/>
               <h5>M型</h5>
-              <img src="images/goods/lmxq-m.jpg" class="d-block mx-auto"/>
+              <img src="images/goods/lmxq-m.jpg" class="d-block mx-auto" alt="螺母吊环M型规格详情"/>
               
             </div>
           </div>
@@ -147,7 +149,7 @@
         </div>
         <div class="footer-modern-panel text-center">
           <div class="container">
-            <p class="rights"><span>Copyright &copy; 2025.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">备案号：苏ICP00001号;</a></span></p>
+            <p class="rights"><span>Copyright &copy; 2025 苏州千旭精密制造有限公司 All rights reserved. <a href="https://beian.miit.gov.cn" target="_blank">苏ICP备2025201168号-1</a></span></p>
           </div>
         </div>
       </footer>
