--- a/shop.html
+++ b/shop.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>产品中心</title>
+    <title>产品中心 - 苏州千旭精密制造有限公司</title>
+    <meta name="description" content="苏州千旭精密制造有限公司产品中心，专业提供滚珠吊环、侧拉吊环、眼型吊环、螺母吊环、卸扣吊环及工业万向旋转吊环等高品质精密吊装配件。">
+    <meta name="keywords" content="滚珠吊环, 侧拉吊环, 眼型吊环, 螺母吊环, 卸扣吊环, 工业万向旋转吊环, 产品中心, 苏州千旭精密制造有限公司">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="/cdn-cgi/apps/head/3ts2ksMwXvKRuG480KNifJ2_JNM.js"></script><link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700">
+    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700"> -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
@@ -57,8 +59,8 @@
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand" style=" width:800;height:82">
                     <!--Brand--><a class="brand" href="index.html">
-                     <img class="brand-logo-dark" src="images/logo-2.png" alt="" width="800" height="82"/>
-					          <img class="brand-logo-light" src="images/logo1.png" alt="" width="800" height="82"/></a>
+                     <img class="brand-logo-dark" src="images/logo-2.png" alt="苏州千旭精密制造有限公司" width="800" height="82"/>
+               <img class="brand-logo-light" src="images/logo1.png" alt="苏州千旭精密制造有限公司" width="800" height="82"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-aside-element">
@@ -113,7 +115,7 @@
                   <!-- Product-->
                   <article class="product">
                     <div class="product-body">
-                      <div class="product-figure"><img src="images/goods/gunzhu.png" alt="" width="180" height="180"/>
+                      <div class="product-figure"><img src="images/goods/gunzhu.png" alt="滚珠吊环" width="180" height="180"/>
                       </div>
                       <h5 class="product-title"><a href="gunzhu-product.html">滚珠吊环</a></h5>
                       <div class="product-price-wrap">
@@ -129,7 +131,7 @@
                   <!-- Product-->
                   <article class="product">
                     <div class="product-body">
-                      <div class="product-figure"><img src="images/goods/cela.png" alt="" width="180" height="180"/>
+                      <div class="product-figure"><img src="images/goods/cela.png" alt="侧拉吊环" width="180" height="180"/>
                       </div>
                       <h5 class="product-title"><a href="cela-product.html">侧拉吊环</a></h5>
                       <div class="product-price-wrap">
@@ -145,7 +147,7 @@
                   <!-- Product-->
                   <article class="product">
                     <div class="product-body">
-                      <div class="product-figure"><img src="images/goods/yanxing.png" alt="" width="180" height="180"/>
+                      <div class="product-figure"><img src="images/goods/yanxing.png" alt="眼型吊环" width="180" height="180"/>
                       </div>
                       <h5 class="product-title"><a href="yanxing2-product.html">眼型吊环</a></h5>
                       <div class="product-price-wrap">
@@ -161,7 +163,7 @@
                   <!-- Product-->
                   <article class="product">
                     <div class="product-body">
-                      <div class="product-figure"><img src="images/goods/luomu.png" alt="" width="180" height="180"/>
+                      <div class="product-figure"><img src="images/goods/luomu.png" alt="螺母吊环" width="180" height="180"/>
                       </div>
                       <h5 class="product-title"><a href="luomu-product.html">螺母吊环</a></h5>
                       <div class="product-price-wrap">
@@ -177,7 +179,7 @@
                   <!-- Product-->
                   <article class="product">
                     <div class="product-body">
-                      <div class="product-figure"><img src="images/goods/xiekou.png" alt="" width="180" height="180"/>
+                      <div class="product-figure"><img src="images/goods/xiekou.png" alt="卸扣吊环" width="180" height="180"/>
                       </div>
                       <h5 class="product-title"><a href="xiekou-product.html">卸扣吊环</a></h5>
                       <div class="product-price-wrap">
@@ -193,7 +195,7 @@
                   <!-- Product-->
                   <article class="product">
                     <div class="product-body">
-                      <div class="product-figure"><img src="images/goods/yanxing1.png" alt="" width="180" height="180"/>
+                      <div class="product-figure"><img src="images/goods/yanxing1.png" alt="眼型吊环" width="180" height="180"/>
                       </div>
                       <h5 class="product-title"><a href="yanxing1-product.html">眼型吊环</a></h5>
                       <div class="product-price-wrap">
@@ -258,7 +260,7 @@
         </div>
         <div class="footer-modern-panel text-center">
           <div class="container">
-            <p class="rights"><span>Copyright &copy; 2025.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">备案号：苏ICP00001号;</a></span></p>
+            <p class="rights"><span>Copyright &copy; 2025 苏州千旭精密制造有限公司 All rights reserved. <a href="https://beian.miit.gov.cn" target="_blank">苏ICP备2025201168号-1</a></span></p>
           </div>
         </div>
       </footer>
