--- a/about-us.html
+++ b/about-us.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>关于我们</title>
+    <title>关于我们 - 苏州千旭精密制造有限公司</title>
+    <meta name="description" content="了解苏州千旭精密制造有限公司，一家专注于精密吊装配件研发、生产与销售的企业。我们拥有先进的生产设备和完善的质量管理体系，致力于为各行业提供高效、安全的吊装解决方案。">
+    <meta name="keywords" content="关于我们, 公司简介, 公司文化, 资历证书, 苏州千旭精密制造有限公司">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="/cdn-cgi/apps/head/3ts2ksMwXvKRuG480KNifJ2_JNM.js"></script><link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700">
+    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700"> -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
@@ -57,8 +59,8 @@
                   <!-- RD Navbar Brand-->
                   <div class="rd-navbar-brand" style=" width:800;height:82">
                     <!--Brand--><a class="brand" href="index.html">
-                     <img class="brand-logo-dark" src="images/logo-2.png" alt="" width="800" height="82"/>
-					          <img class="brand-logo-light" src="images/logo1.png" alt="" width="800" height="82"/></a>
+                     <img class="brand-logo-dark" src="images/logo-2.png" alt="苏州千旭精密制造有限公司" width="800" height="82"/>
+               <img class="brand-logo-light" src="images/logo1.png" alt="苏州千旭精密制造有限公司" width="800" height="82"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-aside-element">
@@ -143,23 +145,23 @@
               <div class="slick-slider-1 inset-xl-left-35">
                 <!-- Slick Carousel-->
                 <div class="slick-slider carousel-parent slick-nav-1 slick-nav-2" id="carousel-parent" data-items="1" data-autoplay="true" data-slide-effect="true" data-child="#child-carousel" data-for="#child-carousel" data-arrows="true">
-                  <div class="item"><img src="images/goods/about_1_634_373.jpg" alt="" width="634" height="373"/>
+                  <div class="item"><img src="images/goods/about_1_634_373.jpg" alt="公司环境" width="634" height="373"/>
                   </div>
-                  <div class="item"><img src="images/goods/about_3_634_373.jpg" alt="" width="634" height="373"/>
+                  <div class="item"><img src="images/goods/about_3_634_373.jpg" alt="生产车间" width="634" height="373"/>
                   </div>
-                  <div class="item"><img src="images/goods/about_4_634_373.jpg" alt="" width="634" height="373"/>
+                  <div class="item"><img src="images/goods/about_4_634_373.jpg" alt="公司设备" width="634" height="373"/>
                   </div>
-                  <div class="item"><img src="images/goods/about_2_634_373.jpg" alt="" width="634" height="373"/>
+                  <div class="item"><img src="images/goods/about_2_634_373.jpg" alt="办公环境" width="634" height="373"/>
                   </div>
                 </div>
                 <div class="slick-slider child-carousel" id="child-carousel" data-items="3" data-sm-items="4" data-md-items="4" data-lg-items="4" data-xl-items="4" data-xxl-items="4" data-for="#carousel-parent">
-                  <div class="item"><img src="images/goods/about_1_143_114.jpg" alt="" width="143" height="114"/>
+                  <div class="item"><img src="images/goods/about_1_143_114.jpg" alt="公司环境缩略图" width="143" height="114"/>
                   </div>
-                  <div class="item"><img src="images/goods/about_3_143_114.jpg" alt="" width="143" height="114"/>
+                  <div class="item"><img src="images/goods/about_3_143_114.jpg" alt="生产车间缩略图" width="143" height="114"/>
                   </div>
-                  <div class="item"><img src="images/goods/about_4_143_114.jpg" alt="" width="143" height="114"/>
+                  <div class="item"><img src="images/goods/about_4_143_114.jpg" alt="公司设备缩略图" width="143" height="114"/>
                   </div>
-                  <div class="item"><img src="images/goods/about_2_143_114.jpg" alt="" width="143" height="114"/>
+                  <div class="item"><img src="images/goods/about_2_143_114.jpg" alt="办公环境缩略图" width="143" height="114"/>
                   </div>
                 </div>
               </div>
@@ -238,7 +240,7 @@
         </div>
         <div class="footer-modern-panel text-center">
           <div class="container">
-            <p class="rights"><span>Copyright &copy; 2025.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">备案号：苏ICP00001号;</a></span></p>
+            <p class="rights"><span>Copyright &copy; 2025 苏州千旭精密制造有限公司 All rights reserved. <a href="https://beian.miit.gov.cn" target="_blank">苏ICP备2025201168号-1</a></span></p>
           </div>
         </div>
       </footer>
