--- a/cela-product.html
+++ b/cela-product.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="zh-CN">
   <head>
-    <title>产品详情</title>
+    <title>侧拉吊环 - 产品详情 - 苏州千旭精密制造有限公司</title>
+    <meta name="description" content="苏州千旭精密制造有限公司生产的侧拉吊环专为侧向受力工况设计，选用高强度合金钢，保证在侧向拉力下依然具备优异的承载能力和安全性能。产品结构紧凑，安装便捷，广泛用于机械制造、模具吊运等需侧向吊装的场合。">
+    <meta name="keywords" content="侧拉吊环, 苏州千旭精密制造有限公司, 精密吊装配件, 高强度合金钢">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700">
+    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700"> -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
@@ -43,8 +45,8 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <div class="rd-navbar-brand" style=" width:800;height:82">
                     <a class="brand" href="index.html">
-                      <img class="brand-logo-dark" src="images/logo-2.png" alt="" width="800" height="82"/>
-                      <img class="brand-logo-light" src="images/logo1.png" alt="" width="800" height="82"/>
+                      <img class="brand-logo-dark" src="images/logo-2.png" alt="苏州千旭精密制造有限公司" width="800" height="82"/>
+                      <img class="brand-logo-light" src="images/logo1.png" alt="苏州千旭精密制造有限公司" width="800" height="82"/>
                     </a>
                   </div>
                 </div>
@@ -91,8 +93,8 @@
               <img src="images/goods/clxq_zt.png" alt="侧拉吊环" width="380" height="380" style="border-radius:12px;box-shadow:0 4px 24px rgba(0,0,0,0.14)" class="d-block mx-auto">
             </div>
             <div class="col-md-6 col-lg-7">
-              <h2>侧拉吊环</h2>
-              <p>适用于起重，耐用可靠。</p>
+              <h1>侧拉吊环</h1>
+              <p>侧拉吊环专为侧向受力工况设计，选用高强度合金钢，经过精密加工和严格检测，保证在侧向拉力下依然具备优异的承载能力和安全性能。该产品结构紧凑，安装便捷，广泛用于机械制造、模具吊运等需侧向吊装的场合，是可靠高效的吊装辅具。</p>
               <ul class="list-marked">
                 <li>材质：合金钢</li>
                 <li>颜色：红色，定制</li>
@@ -105,7 +107,7 @@
           <div class="row row-40 mt-5">
             <div class="col-12">
               <h4>产品详情</h4>
-              <img src="images/goods/clxq.jpg" class="d-block mx-auto"/>
+              <img src="images/goods/clxq.jpg" class="d-block mx-auto" alt="侧拉吊环产品详情规格"/>
             </div>
           </div>
         </div>
@@ -143,7 +145,7 @@
         </div>
         <div class="footer-modern-panel text-center">
           <div class="container">
-            <p class="rights"><span>Copyright &copy; 2025.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">备案号：苏ICP00001号;</a></span></p>
+            <p class="rights"><span>Copyright &copy; 2025 苏州千旭精密制造有限公司 All rights reserved. <a href="https://beian.miit.gov.cn" target="_blank">苏ICP备2025201168号-1</a></span></p>
           </div>
         </div>
       </footer>
