--- a/yanxing1-product.html
+++ b/yanxing1-product.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="zh-CN">
   <head>
-    <title>产品详情</title>
+    <title>眼型吊环 - 产品详情 - 苏州千旭精密制造有限公司</title>
+    <meta name="description" content="苏州千旭精密制造有限公司生产的眼型吊环采用高强度合金钢锻造，结构坚固，安全可靠。适用于各种起重设备和吊装作业，是工业生产中常用的基础吊装配件。">
+    <meta name="keywords" content="眼型吊环, 苏州千旭精密制造有限公司, 精密吊装配件, 起重吊环">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700">
+    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CLato%7CKalam:300,400,700"> -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
@@ -43,8 +45,8 @@
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                   <div class="rd-navbar-brand" style=" width:800;height:82">
                     <a class="brand" href="index.html">
-                      <img class="brand-logo-dark" src="images/logo-2.png" alt="" width="800" height="82"/>
-                      <img class="brand-logo-light" src="images/logo1.png" alt="" width="800" height="82"/>
+                      <img class="brand-logo-dark" src="images/logo-2.png" alt="苏州千旭精密制造有限公司" width="800" height="82"/>
+                      <img class="brand-logo-light" src="images/logo1.png" alt="苏州千旭精密制造有限公司" width="800" height="82"/>
                     </a>
                   </div>
                 </div>
@@ -91,8 +93,8 @@
               <img src="images/goods/yxxq_zt1.png" alt="眼型吊环" width="380" height="380" style="border-radius:12px;box-shadow:0 4px 24px rgba(0,0,0,0.14)" class="d-block mx-auto">
             </div>
             <div class="col-md-6 col-lg-7">
-              <h2>眼型吊环</h2>
-              <p>适用于起重，耐用可靠。</p>
+              <h1>眼型吊环</h1>
+              <p>眼型吊环是工业吊装作业中最基础、最常用的吊点之一。它由高强度合金钢整体锻造而成，结构简单而坚固，确保了极高的安全性和耐用性。适用于连接吊钩、钢丝绳等索具，广泛应用于各类机械、模具、建筑工程的起重吊运任务中。</p>
               <ul class="list-marked">
                 <li>材质：合金钢</li>
                 <li>颜色：白色，红色，定制</li>
@@ -105,7 +107,7 @@
           <div class="row row-40 mt-5">
             <div class="col-12">
               <h4>产品详情</h4>
-              <img src="images/goods/yxxq.jpg" class="d-block mx-auto"/>
+              <img src="images/goods/yxxq.jpg" class="d-block mx-auto" alt="眼型吊环产品详情规格"/>
             </div>
           </div>
         </div>
@@ -143,7 +145,7 @@
         </div>
         <div class="footer-modern-panel text-center">
           <div class="container">
-            <p class="rights"><span>Copyright &copy; 2025.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">备案号：苏ICP00001号;</a></span></p>
+            <p class="rights"><span>Copyright &copy; 2025 苏州千旭精密制造有限公司 All rights reserved. <a href="https://beian.miit.gov.cn" target="_blank">苏ICP备2025201168号-1</a></span></p>
           </div>
         </div>
       </footer>
