--- a/about-us.html
+++ b/about-us.html
@@ -139,7 +139,7 @@
                     <p>第三方检测报告</p>
                   </div>
                 </div>
-              </div><a class="button button-lg button-shadow-2 button-primary button-zakaria" target="_blank" href="https://baike.baidu.com/item/%E8%8B%8F%E5%B7%9E%E5%8D%83%E6%97%AD%E7%B2%BE%E5%AF%86%E5%88%B6%E9%80%A0%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/54032509?fr=aladdin">更多信息</a>
+              </div><a class="button button-lg button-shadow-2 button-primary button-zakaria" target="_blank" href="contact-us.html">取得联系</a>
             </div>
             <div class="col-md-11 col-lg-6 col-xl-7">
               <div class="slick-slider-1 inset-xl-left-35">
